DEFINICION DE VARIABLES JS

--- a/index_stickers.html
+++ b/index_stickers.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="layout">
+        <div><p>Puedes llevar hasta 10 stickers en total</p></div>
         <div class="container">
-            <img src="/assets/img/sticker1.jpeg" alt="sticker numero 1">
-            <img src="/assets/img/sticker2.jpeg" alt="sticker numero 1">
-            <img src="/assets/img/sticker3.jpeg" alt="sticker numero 1">
+            <img id="input1" src="/assets/img/sticker1.jpeg" alt="sticker numero 1">
+            <img id="input2" src="/assets/img/sticker2.jpeg" alt="sticker numero 1">
+            <img id="input3" src="/assets/img/sticker3.jpeg" alt="sticker numero 1">
             <input type="text" placeholder="Cantidad de stickers">
             <input type="text" placeholder="Cantidad de stickers">
             <input type="text" placeholder="Cantidad de stickers">
