DEFINICION DE PASSWORD Y FUNCION DE VERIFICACION, ADEMAS DE README

--- a/index_password.html
+++ b/index_password.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h2>Ingresa el password</h2>
         <div class="selectors">    
-                <select name="selector1" id="selector1">
+                <select name="selector1" id="selector1" onchange="definicionVar()">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -23,7 +23,7 @@
                     <option value="9">9</option>
                     <option value="0">0</option>
                 </select>
-                <select name="selector2" id="selector2">
+                <select name="selector2" id="selector2" onchange="definicionVar()">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -35,7 +35,7 @@
                     <option value="9">9</option>
                     <option value="0">0</option>
                 </select>
-                <select name="selector3" id="selector3">
+                <select name="selector3" id="selector3" onchange="definicionVar()">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -48,8 +48,10 @@
                     <option value="0">0</option>
                 </select>
         </div>
-        <button>Ingresar</button>
-        <p id="respuesta"></p>
+        <button onclick="verificar(definicionVar())">Ingresar</button>
+        <p><span id="respuesta"></span></p>
     </div>
+
+<script src="/assets/js/index_password.js"></script>
 </body>
 </html>
